# pillar_app

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  NEWS.md  README.md
apps/: CMakeLists.txt
apps/include/differ/: differ_widget.h  resources.h
apps/include/editor/: about_dialog.h  console_dock.h  issue_dock.h  issue_table_filter_model.h  issue_table_model.h  main_window.h
apps/include/migrator/: console_widget.h  main_window.h  migration_manager.h  migrator_widget.h  resources.h
apps/resource/differ/: differ.qrc
apps/resource/editor/: editor.qrc
apps/resource/migrator/: migrator.qrc
apps/src/differ/: CMakeLists.txt  differ_widget.cpp  main_window.cpp
apps/src/editor/: CMakeLists.txt  about_dialog.cpp  console_dock.cpp  issue_dock.cpp  issue_table_filter_model.cpp  issue_table_model.cpp  main.cpp  main_window.cpp
apps/src/migrator/: CMakeLists.txt  console_widget.cpp  main.cpp  main_window.cpp  migration_manager.cpp  migrator_widget.cpp
apps/ui/differ/: differ_widget.ui  main_window.ui
apps/ui/editor/: issue_dock.ui  main_window.ui
apps/ui/migrator/: main_window.ui  migrator_widget.ui
dependencies/: CMakeLists.txt
modules/: CMakeLists.txt
modules/include/: config.h  config.h.in
modules/include/aegis/: client.h  export.h  response.h  result.h  serializer.h  server.h
modules/include/egnite/: application.h  command_line_parser.h  export.h  file_format.h  format_helper.h  issue_manager.h  language_translator.h  plugin.h  plugin_interface.h  plugin_manager.h  preferences_manager.h  resources.h  script_module.h  style_manager.h
modules/include/metis/: action_manager.h  application.h  command_line_parser.h  config.h  config.h.in  export.h  logging_manager.h  migrator.h  plugin.h  plugin_interface.h  plugin_listener.h  plugin_manager.h  preferences_manager.h
modules/include/pillar/: action_manager.h  application.h  command_line_parser.h  concept.h  config.h  config.h.in  export.h  file_format.h  format_helper.h  issue.h  issue_manager.h  language_manager.h  language_translator.h  logging_manager.h  plugin.h  plugin_interface.h  plugin_listener.h  plugin_manager.h  preferences_manager.h  resources.h  script_manager.h  script_module.h  style_manager.h
modules/resource/aegis/: aegis.qrc
modules/resource/pillar/: pillar.qrc
modules/src/aegis/: CMakeLists.txt  client.cpp  serializer.cpp  server.cpp
modules/src/egnite/: CMakeLists.txt  action_manager.cpp  application.cpp  language_manager.cpp  language_translator.cpp  logging_manager.cpp  plugin.cpp  plugin_manager.cpp  style_manager.cpp
modules/src/metis/: CMakeLists.txt  action_manager.cpp  application.cpp  command_line_parser.cpp  logging_manager.cpp  migrator.cpp  plugin.cpp  plugin_interface.cpp  plugin_manager.cpp  preferences_manager.cpp
modules/src/pillar/: CMakeLists.txt  action_manager.cpp  application.cpp  command_line_parser.cpp  file_format.cpp  issue.cpp  issue_manager.cpp  language_manager.cpp  language_translator.cpp  logging_manager.cpp  plugin.cpp  plugin_interface.cpp  plugin_manager.cpp  preferences_manager.cpp  script_manager.cpp  script_module.cpp  style_manager.cpp
plugins/: CMakeLists.txt
plugins/include/diff_v1.0.0/: export.h  plugin.h
plugins/include/diff_v2.0.0/: export.h  plugin.h  plugin.json
plugins/include/diff_v3.0.0/: export.h  plugin.h  plugin.json
plugins/include/flow_document/: export.h  flow_document.h  flow_document_action_handler.h  flow_document_format.h  flow_document_reader.h  flow_editor.h
plugins/include/flow_document_condition_node/: condition_node_plugin.h
plugins/include/flow_document_logic_node/: logic_node_plugin.h  plugin.json
plugins/include/flow_document_math_node/: math_node_plugin.h
plugins/include/migrate_v1.0.0_to_v2.0.0/: export.h  plugin.h  plugin.json
plugins/include/migrate_v2.0.0_to_v3.0.0/: export.h  migrator.h  plugin.h  plugin.json
plugins/src/diff_v1.0.0/: CMakeLists.txt  plugin.cpp
plugins/src/diff_v2.0.0/: CMakeLists.txt  plugin.cpp
plugins/src/diff_v3.0.0/: CMakeLists.txt  plugin.cpp
plugins/src/flow_document/: CMakeLists.txt  flow_document.cpp  flow_document_action_handler.cpp  flow_document_format.cpp  flow_document_format_flow.cpp  flow_document_writer.cpp  flow_editor.cpp  new_flow_document_widget.cpp
plugins/src/flow_document_condition_node/: CMakeLists.txt  condition_node_plugin.cpp
plugins/src/flow_document_logic_node/: CMakeLists.txt
plugins/src/flow_document_math_node/: CMakeLists.txt  math_node_plugin.cpp
plugins/src/flow_document_string_node/: CMakeLists.txt  string_node_plugin.cpp
plugins/src/migrate_v1.0.0_to_v2.0.0/: CMakeLists.txt  migrator.cpp  plugin.cpp
plugins/src/migrate_v2.0.0_to_v3.0.0/: CMakeLists.txt  migrator.cpp  plugin.cpp
plugins/ui/flow_document/: factories_dock.ui
src/: CMakeLists.txt
src/editor/: CMakeLists.txt  about_dialog.cpp  command_line_parser.cpp  console_dock.cpp  issue_dock.cpp  issue_table_filter_model.cpp  issue_table_model.cpp  main.cpp  main_window.cpp
src/editor/document/: new_document_dialog.cpp  new_document_widget_list_delegate.cpp  new_document_widget_list_model.cpp
src/editor/project/: new_project_dialog.cpp  no_project_window.cpp  project_dock.cpp  project_format_pro.cpp  project_reader.cpp  project_window.cpp  project_writer.cpp  recent_project_list_delegate.cpp  recent_project_list_model.cpp
src/editor/settings/: appearance_settings_widget.cpp  general_settings_widget.cpp  (+8 more)
src/egnite/: CMakeLists.txt  action_manager.cpp  application.cpp  command_line_parser.cpp  file_format.cpp  issue.cpp  issue_manager.cpp  language_manager.cpp  logging_manager.cpp  plugin.cpp  plugin_interface.cpp  plugin_manager.cpp  preferences_manager.cpp  script_manager.cpp  script_module.cpp  style_manager.cpp
src/flow/: CMakeLists.txt  action_manager.cpp  file_format.cpp  issue.cpp  issue_manager.cpp  language_manager.cpp  logging_manager.cpp  plugin.cpp  plugin_interface.cpp  plugin_manager.cpp  preferences_manager.cpp  script_manager.cpp  script_module.cpp  style_manager.cpp
src/plugins/: CMakeLists.txt
src/utils/: CMakeLists.txt
(+2684 files in other folders)
