# ----------------------------------------------------------------------- #
# -------------------- Set CMake version and project -------------------- #
# ----------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
project(
  EGNITE
  VERSION 0.1.0
  LANGUAGES CXX)
# ----------------------------------------------------------------------- #
# ------------------------ Include config and macros -------------------- #
# ----------------------------------------------------------------------- #
include(${EGNITE_SOURCE_DIR}/cmake/config.cmake)
include(${EGNITE_SOURCE_DIR}/cmake/macros.cmake)
# ----------------------------------------------------------------------- #
# ---------------------------- Add subdirectories ----------------------- #
# ----------------------------------------------------------------------- #
add_subdirectory(deps)
add_subdirectory(src)

if(EGNITE_BUILD_TEST)
  add_subdirectory(tests)
endif()

add_subdirectory(docs)
# ----------------------------------------------------------------------- #
# ------------------------------- Final steps --------------------------- #
# ----------------------------------------------------------------------- #
egnite_export_modules()
egnite_static_analyzers()
# ----------------------------------------------------------------------- #
