# ----------------------------------------------------------------------- #
# -------------------- Set CMake version and project -------------------- #
# ----------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
project(
  PILLAR
  VERSION 0.1.0
  LANGUAGES CXX)
# ----------------------------------------------------------------------- #
# ------------------------ Include config and macros -------------------- #
# ----------------------------------------------------------------------- #
include(${PILLAR_SOURCE_DIR}/cmake/config.cmake)
include(${PILLAR_SOURCE_DIR}/cmake/macros.cmake)
# ----------------------------------------------------------------------- #
# ---------------------------- Add subdirectories ----------------------- #
# ----------------------------------------------------------------------- #
add_subdirectory(deps)
add_subdirectory(modules)
add_subdirectory(plugins)
add_subdirectory(apps)

add_subdirectory(docs)
# ----------------------------------------------------------------------- #
# ------------------------------- Final steps --------------------------- #
# ----------------------------------------------------------------------- #
pillar_export_modules()
pillar_static_analyzers()
# ----------------------------------------------------------------------- #
