# ----------------------------------------------------------------------- #
# -------------------- Set CMake version and project -------------------- #
# ----------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
project(
  METIS
  VERSION 0.1.0
  LANGUAGES CXX)
# ----------------------------------------------------------------------- #
# ------------------------ Include config and macros -------------------- #
# ----------------------------------------------------------------------- #
include(${METIS_SOURCE_DIR}/cmake/config.cmake)
include(${METIS_SOURCE_DIR}/cmake/macros.cmake)
# ----------------------------------------------------------------------- #
# ---------------------------- Add subdirectories ----------------------- #
# ----------------------------------------------------------------------- #
add_subdirectory(deps)
add_subdirectory(modules)
add_subdirectory(plugins)
add_subdirectory(apps)

add_subdirectory(docs)
# ----------------------------------------------------------------------- #
# ------------------------------- Final steps --------------------------- #
# ----------------------------------------------------------------------- #
metis_export_modules()
metis_static_analyzers()
# ----------------------------------------------------------------------- #
