# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set CMake Version ----------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Generate headers ------------------------------------------ #
# -------------------------------------------------------------------------------------------------- #
set(include_root ${FLOW_SOURCE_DIR}/include/flow)

configure_file(
        ${include_root}/config.h.in
        ${include_root}/config.h)
# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Add subdirectories ---------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
add_subdirectory(utils)
add_subdirectory(modules)
add_subdirectory(plugins)
add_subdirectory(editor)
# -------------------------------------------------------------------------------------------------- #
